--- a/frontend/src/core/less/forms.less
+++ b/frontend/src/core/less/forms.less
@@ -49,7 +49,8 @@ select {
 }
 
 input:disabled, textarea:disabled {
-    background-color:#e2e2e2;
+    background-color: #707070;
+    color: #f3fcfe;
 }
 
 .form-list {
