--- a/frontend/src/modules/editor/contentObject/less/editorMenu.less
+++ b/frontend/src/modules/editor/contentObject/less/editorMenu.less
@@ -10,7 +10,8 @@
 
   background-color: @white;
   transition: box-shadow 0.3s;
-  box-shadow: 0px 0px 1px 1px #EEE;
+  box-shadow: 0px 0px 1px 1px lighten(@primary-color, 50%);
+  border-radius:3px;
   &:hover {
     box-shadow: 0px 0px 3px 3px #e0e0e0;
     cursor: pointer;
