--- a/frontend/src/modules/editor/contentObject/less/editorPage.less
+++ b/frontend/src/modules/editor/contentObject/less/editorPage.less
@@ -36,7 +36,7 @@
     transition:all 0.2s;
     &:hover {
         color: @white;
-        background-color:lighten(@secondary-color, 20%);
+        //background-color:lighten(@secondary-color, 20%);
     }
     &.selected {
         color: @white;
